# conditional-residual-modelling

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
reports/: RESULTS.md
scripts/: download_data.py  train.py  validate_run.py
src/conditional_residual_modelling/: __init__.py  data.py  pipeline.py
src/conditional_residual_modelling/evaluation/: __init__.py
src/conditional_residual_modelling/models/: __init__.py  quantile_regressor.py  shared.py
src/cvae_spx/: __init__.py  config.py  features.py
src/cvae_spx/evaluation/: evaluate.py
src/cvae_spx/models/: xgboost_baseline.py
tests/: test_alignment.py  test_risk_metrics.py  test_smoke.py
